--- a/playground-01-220616/playground-01.html
+++ b/playground-01-220616/playground-01.html
@@ -9,5 +9,7 @@
 </head>
 <body>
     <canvas class="glslCanvas" data-fragment-url="shader.frag" width="500" height="500"></canvas>
+
+    <script src="script.js"></script>
 </body>
 </html>
