--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>GLSL Playgrounds</h1>
 
+    <a href="./playground-02-220617/playground-02.html">Playground 2</a>
     <a href="./playground-01-220616/playground-01.html">Playground 1</a>
 </body>
 </html>
