--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>GLSL Playgrounds</h1>
 
+    <a href="playground-07-220623/playground-07.html">Playground 7</a>
     <a href="playground-06-220622/playground-06.html">Playground 6</a>
     <a href="playground-05-220621/playground-05.html">Playground 5</a>
     <a href="playground-04-220620/playground-04.html">Playground 4</a>
