--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>GLSL Playgrounds</h1>
 
-    <a href="playground-08-220624/playground-08-html">Playground 8</a>
+    <a href="playground-08-220624/playground-08.html">Playground 8</a>
     <a href="playground-07-220623/playground-07.html">Playground 7</a>
     <a href="playground-06-220622/playground-06.html">Playground 6</a>
     <a href="playground-05-220621/playground-05.html">Playground 5</a>
