--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>GLSL Playgrounds</h1>
 
+    <a href="playground-10-220628/playground-10.html">Playground 10</a>
     <a href="playground-09-220625/playground-09.html">Playground 9</a>
     <a href="playground-08-220624/playground-08.html">Playground 8</a>
     <a href="playground-07-220623/playground-07.html">Playground 7</a>
