--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>GLSL Playgrounds</h1>
 
+    <a href="playground-12-220702/playground-12.html">Playground 12</a>
     <a href="playground-11-220701/playground-11.html">Playground 11</a>
     <a href="playground-10-220628/playground-10.html">Playground 10</a>
     <a href="playground-09-220625/playground-09.html">Playground 9</a>
