--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>GLSL Playgrounds</h1>
 
+    <a href="playground-15-220707/playground-15.html">Playground 15</a>
     <a href="playground-14-220706/playground-14.html">Playground 14</a>
     <a href="playground-13-220704/playground-13.html">Playground 13</a>
     <a href="playground-12-220702/playground-12.html">Playground 12</a>
