--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>GLSL Playgrounds</h1>
 
+    <a href="playground-17-220806/playground-17.html">Playground 17</a>
     <a href="playground-16-220709/playground-16.html">Playground 16</a>
     <a href="playground-15-220707/playground-15.html">Playground 15</a>
     <a href="playground-14-220706/playground-14.html">Playground 14</a>
