--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>GLSL Playgrounds</h1>
 
+    <a href="playground-19-220828/playground-19.html">Playground 19</a>
     <a href="playground-18-220823/playground-18.html">Playground 18</a>
     <a href="playground-17-220806/playground-17.html">Playground 17</a>
     <a href="playground-16-220709/playground-16.html">Playground 16</a>
