--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>GLSL Playgrounds</h1>
 
+    <a href="playground-21-220901/playground-21.html">Playground 21</a>
     <a href="playground-20-220830/playground-20.html">Playground 20</a>
     <a href="playground-19-220828/playground-19.html">Playground 19</a>
     <a href="playground-18-220823/playground-18.html">Playground 18</a>
