--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>GLSL Playgrounds</h1>
 
+    <a href="playground-24-220905/playground-24.html">Playground 24</a>
     <a href="playground-23-220904/playground-23.html">Playground 23</a>
     <a href="playground-22-220903/playground-22.html">Playground 22</a>
     <a href="playground-21-220901/playground-21.html">Playground 21</a>
