--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>GLSL Playgrounds</h1>
 
+    <a href="playground-27-220917/playground-27.html">Playground 27</a>
     <a href="playground-26-220916/playground-26.html">Playground 26</a>
     <a href="playground-25-220906/playground-25.html">Playground 25</a>
     <a href="playground-24-220905/playground-24.html">Playground 24</a>
