--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>GLSL Playgrounds</h1>
 
+    <a href="playground-31-221001/playground-31.html">Playground 31</a>
     <a href="playground-30-220928/playground-30.html">Playground 30</a>
     <a href="playground-29-220925/playground-29.html">Playground 29</a>
     <a href="playground-28-220920/playground-28.html">Playground 28</a>
