--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>GLSL Playgrounds</h1>
 
+    <a href="playground-33-221004/playground-33.html">Playground 33</a>
     <a href="playground-32-221002/playground-32.html">Playground 32</a>
     <a href="playground-31-221001/playground-31.html">Playground 31</a>
     <a href="playground-30-220928/playground-30.html">Playground 30</a>
