--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>GLSL Playgrounds</h1>
 
+    <a href="playground-35-221008/playground-35.html">Playground 35</a>
     <a href="playground-34-221007/playground-34.html">Playground 34</a>
     <a href="playground-33-221004/playground-33.html">Playground 33</a>
     <a href="playground-32-221002/playground-32.html">Playground 32</a>
