--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>GLSL Playgrounds</h1>
 
+    <a href="playground-37-221011/playground-37.html">Playground 37</a>
     <a href="playground-36-221009/playground-36.html">Playground 36</a>
     <a href="playground-35-221008/playground-35.html">Playground 35</a>
     <a href="playground-34-221007/playground-34.html">Playground 34</a>
