--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>GLSL Playgrounds</h1>
 
+    <a href="playground-42-221023/playground-42.html">Playground 42</a>
     <a href="playground-41-221020/playground-41.html">Playground 41</a>
     <a href="playground-40-221017/playground-40.html">Playground 40</a>
     <a href="playground-39-221015/playground-39.html">Playground 39</a>
