--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>GLSL Playgrounds</h1>
 
+    <a href="playground-46-221030/playground-46.html">Playground 46</a>
     <a href="playground-45-221029/playground-45.html">Playground 45</a>
     <a href="playground-44-221028/playground-44.html">Playground 44</a>
     <a href="playground-43-221024/playground-43.html">Playground 43</a>
