--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>GLSL Playgrounds</h1>
 
+    <a href="playground-49-221106/playground-49.html">Playground 49</a>
     <a href="playground-48-221104/playground-48.html">Playground 48</a>
     <a href="playground-47-221102/playground-47.html">Playground 47</a>
     <a href="playground-46-221030/playground-46.html">Playground 46</a>
