--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>GLSL Playgrounds</h1>
 
+    <a href="playground-51-221116/playground-51.html">Playground 51</a>
     <a href="playground-50-221113/playground-50.html">Playground 50</a>
     <a href="playground-49-221106/playground-49.html">Playground 49</a>
     <a href="playground-48-221104/playground-48.html">Playground 48</a>
