--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>GLSL Playgrounds</h1>
 
+    <a href="playground-53-221120/playground-53.html">Playground 53</a>
     <a href="playground-52-221118/playground-52.html">Playground 52</a>
     <a href="playground-51-221116/playground-51.html">Playground 51</a>
     <a href="playground-50-221113/playground-50.html">Playground 50</a>
