--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>GLSL Playgrounds</h1>
 
+    <a href="playground-55-221125/playground-55.html">Playground 55</a>
     <a href="playground-54-221121/playground-54.html">Playground 54</a>
     <a href="playground-53-221120/playground-53.html">Playground 53</a>
     <a href="playground-52-221118/playground-52.html">Playground 52</a>
