--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>GLSL Playgrounds</h1>
 
+    <a href="playground-57-221127/playground-57.html">Playground 57</a>
     <a href="playground-56-221126/playground-56.html">Playground 56</a>
     <a href="playground-55-221125/playground-55.html">Playground 55</a>
     <a href="playground-54-221121/playground-54.html">Playground 54</a>
