--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>GLSL Playgrounds</h1>
 
+    <a href="playground-60-221203/playground-60.html">Playground 60</a>
     <a href="playground-59-221130/playground-59.html">Playground 59</a>
     <a href="playground-58-221129/playground-58.html">Playground 58</a>
     <a href="playground-57-221127/playground-57.html">Playground 57</a>
