--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>GLSL Playgrounds</h1>
 
+    <a href="playground-62-221206/playground-62.html">Playground 62</a>
     <a href="playground-61-221204/playground-61.html">Playground 61</a>
     <a href="playground-60-221203/playground-60.html">Playground 60</a>
     <a href="playground-59-221130/playground-59.html">Playground 59</a>
