--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>GLSL Playgrounds</h1>
 
+    <a href="playground-65-231020/playground-65.html">Playground 65</a>
     <a href="playground-64-221214/playground-64.html">Playground 64</a>
     <a href="playground-63-221209/playground-63.html">Playground 63</a>
     <a href="playground-62-221206/playground-62.html">Playground 62</a>
