--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>GLSL Playgrounds</h1>
 
+    <a href="playground-67-231023/playground-67.html">Playground 67</a>
     <a href="playground-66-231021/playground-66.html">Playground 66</a>
     <a href="playground-65-231020/playground-65.html">Playground 65</a>
     <a href="playground-64-221214/playground-64.html">Playground 64</a>
