--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>GLSL Playgrounds</h1>
 
+    <a href="playground-70-231029/playground-70.html">Playground 70</a>
     <a href="playground-69-231027/playground-69.html">Playground 69</a>
     <a href="playground-68-231025/playground-68.html">Playground 68</a>
     <a href="playground-67-231023/playground-67.html">Playground 67</a>
