--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>GLSL Playgrounds</h1>
 
+    <a href="playground-72-231103/playground-72.html">Playground 72</a>
     <a href="playground-71-231030/playground-71.html">Playground 71</a>
     <a href="playground-70-231029/playground-70.html">Playground 70</a>
     <a href="playground-69-231027/playground-69.html">Playground 69</a>
