--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>GLSL Playgrounds</h1>
 
+    <a href="playground-75-231108/playground-75.html">Playground 75</a>
     <a href="playground-74-231105/playground-74.html">Playground 74</a>
     <a href="playground-73-231104/playground-73.html">Playground 73</a>
     <a href="playground-72-231103/playground-72.html">Playground 72</a>
