--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>GLSL Playgrounds</h1>
 
+    <a href="playground-78-231112/playground-78.html">Playground 78</a>
     <a href="playground-77-231111/playground-77.html">Playground 77</a>
     <a href="playground-76-231110/playground-76.html">Playground 76</a>
     <a href="playground-75-231108/playground-75.html">Playground 75</a>
