--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>GLSL Playgrounds</h1>
 
+    <a href="playground-80-231117/playground-80.html">Playground 80</a>
     <a href="playground-79-231114/playground-79.html">Playground 79</a>
     <a href="playground-78-231112/playground-78.html">Playground 78</a>
     <a href="playground-77-231111/playground-77.html">Playground 77</a>
