--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>GLSL Playgrounds</h1>
 
+    <a href="playground-84-231126/playground-84.html">Playground 84</a>
     <a href="playground-83-231124/playground-83.html">Playground 83</a>
     <a href="playground-82-231122/playground-82.html">Playground 82</a>
     <a href="playground-81-231119/playground-81.html">Playground 81</a>
