--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>GLSL Playgrounds</h1>
 
+    <a href="playground-90-250318/playground-90.html">Playground 90</a>
     <a href="playground-89-231211/playground-89.html">Playground 89</a>
     <a href="playground-88-231207/playground-88.html">Playground 88</a>
     <a href="playground-87-231203/playground-87.html">Playground 87</a>
