--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>GLSL Playgrounds</h1>
 
+    <a href="playground-93-250331/playground-93.html">Playground 93</a>
     <a href="playground-92-250330/playground-92.html">Playground 92</a>
     <a href="playground-91-250329/playground-91.html">Playground 91</a>
     <a href="playground-90-250318/playground-90.html">Playground 90</a>
