--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>GLSL Playgrounds</h1>
 
+    <a href="playground-95-250402/playground-95.html">Playground 95</a>
     <a href="playground-94-250401/playground-94.html">Playground 94</a>
     <a href="playground-93-250331/playground-93.html">Playground 93</a>
     <a href="playground-92-250330/playground-92.html">Playground 92</a>
