--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>GLSL Playgrounds</h1>
 
+    <a href="playground-97-250404/playground-97.html">Playground 97</a>
     <a href="playground-96-250403/playground-96.html">Playground 96</a>
     <a href="playground-95-250402/playground-95.html">Playground 95</a>
     <a href="playground-94-250401/playground-94.html">Playground 94</a>
