--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>GLSL Playgrounds</h1>
 
+    <a href="playground-99-250406/playground-99.html">Playground 99</a>
     <a href="playground-98-250405/playground-98.html">Playground 98</a>
     <a href="playground-97-250404/playground-97.html">Playground 97</a>
     <a href="playground-96-250403/playground-96.html">Playground 96</a>
